# Shadocal

./: .gitignore  Cargo.toml  Makefile.toml  README.md
backend/: Cargo.toml  Makefile.toml
backend/src/: auth.rs  config.rs  main.rs  server.rs  tana.rs
backend/src/account/: auth.rs  mod.rs  operations.rs
shadocal/: Cargo.toml  Dioxus.toml  Makefile.toml
shadocal-lib/: Cargo.toml
shadocal-lib/src/: db.rs  lib.rs  state.rs  types.rs
shadocal-lib/src/calendar/: event.rs  gcal.rs  mod.rs  types.rs
shadocal-lib/src/format/: raw.rs  tana.rs
shadocal-lib/src/server/: mod.rs  state.rs  tana.rs
shadocal/public/: main.css
shadocal/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
shadocal/src/server/: mod.rs  tana.rs  utils.rs
shadocal/src/ui/: app.rs  mod.rs  route.rs  routes.rs
shadocal/src/ui/routes/: home.rs
shadocal/src/ui/routes/components/: event_list.rs  mod.rs
src/: account.rs  calendar.rs  format.rs  main.rs  server.rs
src/calendar/: event.rs  gcal.rs  mod.rs  oauth.rs
src/format/: mod.rs  tana.rs
src/server/: auth.rs  mod.rs  state.rs  tana.rs  types.rs
