[package]
name = "shadogcal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
directories = "5.0"

google-calendar = "0.7.0"
oauth2 = { version = "4.4.2" }
url = "^2"

tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
