[package]
name = "shadocal"
version = "0.1.1"
edition = "2021"
authors = ["Shadorain"]
repository = "https://github.com/Shadorain/Shadocal"
description = "A blazingly fast, Google calendar (more in future) event formatter webserver tool."
readme = "README.md"
license = "GPL-3.0"
keywords = ["google_calendar", "calendar", "oauth2", "formatter", "events"]
categories = [
    "web-programming::http-server",
    "asynchronous",
    "date-and-time",
    "value-formatting",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
dotenv = "0.15.0"

actix-cors = "0.7"
actix-web = "4.9"
url = "^2"

serde = { version = "1.0.209", features = ["derive"] }
gcal_rs = "0.1.1"
