[workspace]
resolver = "2"
members = ["shadocal", "shadocal-lib"]
default-members = ["shadocal"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Shadorain"]
repository = "https://github.com/Shadorain/Shadocal"
readme = "README.md"
license = "GPL-3.0"
keywords = ["google_calendar", "calendar", "oauth2", "formatter", "events"]
categories = [
    "web-programming::http-server",
    "asynchronous",
    "date-and-time",
    "value-formatting",
]

[workspace.dependencies]
anyhow = "1.0"
tokio = "1.40.0"
