[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shadocal-lib = { path = "../shadocal-lib" }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true

actix-cors = "0.7.0"
actix-web = "4.9.0"
toml = "0.8.19"
directories = "5.0.1"
