[package]
name = "shadocal-lib"
description = "A blazingly fast, calendar event formatter webserver library."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true

chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
polodb_core = "5.1.2"

gcal_rs = { git = "https://github.com/Shadorain/gcal_rs" }
async-trait = "0.1.82"
