[package]
name = "shadocal"
description = "A blazingly fast, calendar event formatter webserver tool."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shadocal-lib = { path = "../shadocal-lib" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true

axum = { version = "0.7.7", optional = true }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = [
    "fullstack",
    "router",
] }
dioxus-logger = "0.5.1"
toml = "0.8.19"
directories = "5.0.1"

[features]
default = []
server = ["dioxus/axum", "axum"]
desktop = ["dioxus/desktop"]
