[package]
name = "shadocal"
description = "A blazingly fast, calendar event formatter webserver tool."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["router"] }
dioxus-logger = "0.5.1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
